cambios de tarea 0.1.2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
+    <html lang="eS"></html>
     <link rel="stylesheet" href="tarea2.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <div class="fondoxd"> <img src="https://i.pinimg.com/originals/d0/e2/4f/d0e24f9d51b60389f20ec011b2b1a250.jpg">
+    </div>
     <div class="top">
         <h1 style="text-align: left;"> graficos de lol</h1>
         <img src="https://lolg-cdn.porofessor.gg/img/s/lol-icon.png">
@@ -16,7 +18,7 @@
         <img src="https://lolg-cdn.porofessor.gg/img/s/lor-icon.png">
     </div>
     <div class="class" style="z-index:-10; position: fixed; width: 100vw;">
-        <img src="https://i.pinimg.com/originals/d0/e2/4f/d0e24f9d51b60389f20ec011b2b1a250.jpg" style="width: 100vw;">
+
         <div class="top">
         </div>
         <div class="texto">
@@ -29,6 +31,7 @@
             <p>porofessor</p>
 
         </div>
+
     </div>
 
 </body>
