--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <head>
-    <html lang="eS"></html>
+    <html lang="es">
+
+    </html>
     <link rel="stylesheet" href="tarea2.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,29 +13,32 @@
 <body>
     <div class="fondoxd"> <img src="https://i.pinimg.com/originals/d0/e2/4f/d0e24f9d51b60389f20ec011b2b1a250.jpg">
     </div>
-    <div class="top">
-        <h1 style="text-align: left;"> graficos de lol</h1>
-        <img src="https://lolg-cdn.porofessor.gg/img/s/lol-icon.png">
-        <img src="https://lolg-cdn.porofessor.gg/img/s/tft-icon.png">
-        <img src="https://lolg-cdn.porofessor.gg/img/s/lor-icon.png">
-    </div>
-    <div class="class" style="z-index:-10; position: fixed; width: 100vw;">
-
+    <div class="container">
         <div class="top">
+            <a href="https://www.leagueofgraphs.com/es/rankings/summoners/kayn/lan">
+                <img src="https://lolg-cdn.porofessor.gg/img/s/banner2.png" alt="">
+            </a>
+            <div class="imgs">
+                <a href="#">
+                    <img src="https://lolg-cdn.porofessor.gg/img/s/lol-icon.png">
+                </a>
+                <a href="#">
+                    <img src="https://lolg-cdn.porofessor.gg/img/s/tft-icon.png">
+                </a>
+                <a href="#">
+                    <img src="https://lolg-cdn.porofessor.gg/img/s/lor-icon.png">
+                </a>
+            </div>
         </div>
-        <div class="texto">
-            <p>inicio</p>
-            <p>campeones</p>
-            <p>clasificatorias</p>
-            <p>estadisticas</p>
-            <p>infografias</p>
-            <p>repeticiones</p>
-            <p>porofessor</p>
-
-        </div>
-
     </div>
-
+    <div class="texto">
+        <p>inicio</p>
+        <p>campeones</p>
+        <p>clasificatorias</p>
+        <p>estadisticas</p>
+        <p>infografias</p>
+        <p>repeticiones</p>
+        <p>porofessor</p>
+    </div>
+    </div>
 </body>
-
-</html>
