clase de luna y sol v1.0.3

--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-
+<html lang="es">
 <head>
-    <html lang="es">
-
-    </html>
     <link rel="stylesheet" href="tarea2.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea2</title>
 </head>
-
 <body>
     <div class="fondoxd"> <img src="https://i.pinimg.com/originals/d0/e2/4f/d0e24f9d51b60389f20ec011b2b1a250.jpg">
     </div>
@@ -29,6 +25,21 @@
                     <img src="https://lolg-cdn.porofessor.gg/img/s/lor-icon.png">
                 </a>
             </div>
+            <div class="spacio"></div>
+            <div class="form">
+                <div class="interruptor">
+                    <div class="item">
+                        <i class="fa-solid fa-sun" style="color: white;"></i>                      
+                        <div class="toggle-pill">
+                            <input type="checkbox" id="pill1" name="check">
+                            <label for="pill1"></label>
+                        </div>
+                        <i class="fa-solid fa-moon" style="color: white;"></i>
+                    </div>
+                </div>
+                <div class="buscador"></div>
+                <div class="lenguaje"></div>
+            </div>
         </div>
     </div>
     <div class="texto">
@@ -42,3 +53,7 @@
     </div>
     </div>
 </body>
+<footer>
+    <script src="https://kit.fontawesome.com/e76a5c10f6.js" crossorigin="anonymous"></script>
+</footer>
+</html>
