--- a/index.html
+++ b/index.html
@@ -37,8 +37,18 @@
                         <i class="fa-solid fa-moon" style="color: white;"></i>
                     </div>
                 </div>
-                <div class="buscador"></div>
-                <div class="lenguaje"></div>
+                <div class="buscador">
+                    <div class="caja-buscador">
+                        <input type="search" placeholder="Campeón, Invocador...">
+                        <i class="fa-solid fa-magnifying-glass" style="color: white;"></i>
+                    </div>
+                </div>
+                <div class="lenguaje">
+                    <select name="" id="">
+                        <option value="">ES</option>
+                        <option value="">EN</option>
+                    </select>
+                </div>
             </div>
         </div>
     </div>
