--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
                     </div>
                 </div>
                 <div class="lenguaje">
-                    <select name="" id="">
-                        <option value="">ES</option>
-                        <option value="">EN</option>
-                    </select>
+                    <div>
+                        <select name="" id="">
+                            <option value="">ES</option>
+                            <option value="">EN</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
