--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="texto">
-        <p>inicio</p>
-        <p>campeones</p>
-        <p>clasificatorias</p>
-        <p>estadisticas</p>
-        <p>infografias</p>
-        <p>repeticiones</p>
-        <p>porofessor</p>
+        <div class="left" style="background-color: #34323a;">
+            <div>
+                <a>inicio</a>
+            </div>
+                <a>campeones</a>
+                <a>clasificatorias</a>
+                <a>estadisticas</a>
+                <a>infografias</a>
+                <a>repeticiones</a>
+                <a>porofessor</a>
+        </div>
     </div>
     </div>
 </body>
