--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <link rel="stylesheet" href="tarea2.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea2</title>
 </head>
+
 <body>
     <div class="fondoxd"> <img src="https://i.pinimg.com/originals/d0/e2/4f/d0e24f9d51b60389f20ec011b2b1a250.jpg">
     </div>
@@ -29,7 +31,7 @@
             <div class="form">
                 <div class="interruptor">
                     <div class="item">
-                        <i class="fa-solid fa-sun" style="color: white;"></i>                      
+                        <i class="fa-solid fa-sun" style="color: white;"></i>
                         <div class="toggle-pill">
                             <input type="checkbox" id="pill1" name="check">
                             <label for="pill1"></label>
@@ -54,20 +56,18 @@
             </div>
         </div>
         <div class="left" style="background-color: #34323a;">
-            <div>
-                <a>inicio</a>
-            </div>
-                <a>campeones</a>
-                <a>clasificatorias</a>
-                <a>estadisticas</a>
-                <a>infografias</a>
-                <a>repeticiones</a>
-                <a>porofessor</a>
+            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-house"></i><a style="color: rgb(172, 174, 177);">inicio</a></div>
+            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-users"></i><a style="color: rgb(172, 174, 177);">campeones</a></div>
+            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-list"></i><a style="color: rgb(172, 174, 177);">clasificatorias</a></div>
+            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-chart-bar"></i><a style="color: rgb(172, 174, 177);">estadisticas</a></div>
+            <div><i style="color: rgb(172, 172, 172);"class="fa-sharp fa-solid fa-chart-simple"></i><a style="color: rgb(172, 174, 177);">infografias</a></div>
+            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-play"></i><a style="color: rgb(172, 174, 177);">repeticiones</a></div>
+            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-hippo"></i><a style="color: rgb(172, 174, 177);">porofessor</a></div>
         </div>
-    </div>
     </div>
 </body>
 <footer>
     <script src="https://kit.fontawesome.com/e76a5c10f6.js" crossorigin="anonymous"></script>
 </footer>
+
 </html>
