--- a/pagina de lol/index.html
+++ b/pagina de lol/index.html
@@ -56,13 +56,13 @@
             </div>
         </div>
         <div class="left" style="background-color: #34323a;">
-            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-house"></i><a style="color: rgb(172, 174, 177);">inicio</a></div>
-            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-users"></i><a style="color: rgb(172, 174, 177);">campeones</a></div>
-            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-list"></i><a style="color: rgb(172, 174, 177);">clasificatorias</a></div>
-            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-chart-bar"></i><a style="color: rgb(172, 174, 177);">estadisticas</a></div>
-            <div><i style="color: rgb(172, 172, 172);"class="fa-sharp fa-solid fa-chart-simple"></i><a style="color: rgb(172, 174, 177);">infografias</a></div>
-            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-play"></i><a style="color: rgb(172, 174, 177);">repeticiones</a></div>
-            <div><i style="color: rgb(172, 172, 172);"class="fa-solid fa-hippo"></i><a style="color: rgb(172, 174, 177);">porofessor</a></div>
+            <div><i class="fa-solid fa-house"></i><a >inicio</a></div>
+            <div><i class="fa-solid fa-users"></i><a >campeones</a></div>
+            <div><i class="fa-solid fa-list"></i><a >clasificatorias</a></div>
+            <div><i class="fa-solid fa-chart-bar"></i><a >estadisticas</a></div>
+            <div><i class="fa-sharp fa-solid fa-chart-simple"></i><a >infografias</a></div>
+            <div><i class="fa-solid fa-play"></i><a >repeticiones</a></div>
+            <div><i class="fa-solid fa-hippo"></i><a >porofessor</a></div>
         </div>
     </div>
 </body>
