ai mi pichula v1

--- a/kirito kun/index.html
+++ b/kirito kun/index.html
@@ -55,6 +55,40 @@
         </div>
     </div>
     <div class="caja-der">
+        <div class="tituloder">
+            <h2>
+                <strong>Lycoris Recoil</strong> </br>Sao
+            </h2>
+
+
+        </div>
+        <div class="parra">
+            <p>
+                Sword Art Online es una de las franquicias que siguen resonando entre el colectivo de fans del anime,
+                las novelas ligeras y los videojuegos, siendo la adaptación animada la que más robusta se muestra hoy en
+                día entre las comunidades occidentales.
+            </p>
+
+        </div>
+        <div class="azu">
+            <div class="barrazu">
+
+            </div>
+
+        </div>
+        <div class="barrader">
+            <div class="balarga">
+
+            </div>
+
+        </div>
+        <div class="imag">
+            <img src="https://static.bandainamcoent.eu/high/sword-art-online/brand-setup/Characters/kirito.png" alt="">
+
+        </div>
+        <div class="subti">
+
+        </div>
 
     </div>
     <div class="caja-banner">
