--- a/kirito kun/index.html
+++ b/kirito kun/index.html
@@ -83,7 +83,7 @@
 
         </div>
         <div class="imag">
-            <img src="https://static.bandainamcoent.eu/high/sword-art-online/brand-setup/Characters/kirito.png" alt="">
+            <img src="https://static.bandainamcoent.eu/high/sword-art-online/brand-setup/Characters/kirito.png" alt="" width="50px" height="250px">
 
         </div>
         <div class="subti">
