--- a/kirito kun/index.html
+++ b/kirito kun/index.html
@@ -70,7 +70,7 @@
             </p>
 
         </div>
-        <div class="azu">
+        <div class="azuu">
             <div class="barrazu">
 
             </div>
