--- a/kirito kun/index.html
+++ b/kirito kun/index.html
@@ -12,6 +12,9 @@
     <div class="container">
         <img src="https://artfiles.alphacoders.com/102/102085.png" alt="">
     </div>
+    <div class="tiranegra">
+    
+    </div>
     <div class="caja-iz">
         <div class="negrita">
             <div class="barra">
